--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^0.4.0",
     "express-redirect": "^1.2.2",
     "gulp": "^3.9.1",
+    "merge-json": "0.1.0-b.3",
     "multer": "^1.3.0",
     "pdf2json": "^1.1.7",
     "popups": "^1.1.3",
